<resources>
    <string name="app_name">ATPH</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="about_developers_label">Main developers</string>
    <string name="about_translator_label">Translator</string>
    <string name="changelog">Changelog</string>
    <string name="translator"></string>
    <string name="about_version_label">Version</string>
    <string name="about_source_label">Source code</string>
    <string name="about_libraries_label">Used libraries</string>
    <string name="nav_geometry">Geometry</string>
    <string name="nav_about">About</string>
    <string name="nav_reward">Material Design </string>
    <string name="nav_bank">Nearest Bank</string>
    <string name="nav_tips">Recycler Tips</string>
    <string name="details">Details</string>
    <string name="version_app">1.0.0</string>
    <string name="tips">
        1. Pilah Sampah berdasarkan kategorinya organik / anorganik \n\n
        2. Kreasikan sampah tersebut menjadi barang yang dapat digunakan kembali\n\n
        3. Dan anda bisa promosikan atau menjual ke teman anda\n\n
        4. Anda bisa saja mengirimkan sampah anda ke bank sampah terdekat melalui samita agar dapat diproses
    </string>
    <string name="text_indikator">
        1. Memahami kebutuhan perangkat VoIP \n\n
        2. Memahami konsep kerja server Softswitch \n\n
        3. Memahami Diagram VoIP dengan benar \n\n
        4. Memahami proses kerja dalam komponen diagram VoIP \n\n
        5. Memahami bagan server softswitch berkaitan dengan PBX \n\n
        6. Memahami konsep kerja server softswitch berkaitan dengan PBX \n\n
        7. Memahami Konfigurasi ekstensi pada server softswitch \n\n
        8. Memahami Konfigurasi dial plan pada server softswitch \n\n
        9. Memahami prosedur instalasi server softswitch berbasis session initial protocol (SIP) \n\n
        10. Mampu melaksanakan prosedur instalasi server softswitch berbasis session initial protocol (SIP) \n\n
    </string>
    <string name="text_kd">
        1. Memahami konsep kerja protokoler server softswitch \n\n
        2. Memahami diagram rangkaian operasi komunikasi VoIP \n\n
        3. Memahami bagan dan konsep kerja server softswitch berkaitan dengan PBX \n\n
        4. Menjelaskan konfigurasi ekstensi dan dial plan server softswitch \n\n
        5. Memahami prosedur instalasi server softswitch berbasis session initial protocol (SIP) \n\n
    </string>
    <string name="text_ki_3">
        Memahami, menerapkan dan menganalisis pengetahuan faktual, konseptual, procedural dan metakognitif berdasarkan rasa ingin tahunya tentang ilmu pengetahuan, teknologi, seni, budaya, dan humaniora dalam wawasan kemanusiaan, kebangsaan, kenegaraan, dan peradaban terkait penyebab fenomena dan kejadian dalam bidang kerja yang spesifik untuk memecahkan masalah. \n\n
    </string>
    <string name="text_ki_4">
        Melaksanakan tugas spesifik, dengan menggunakan alat, informasi, dan prosedur kerja yang lazim dilakukan serta menyelesaikan masalah sederhana sesuai dengan bidang dan lingkup Kelompok Kompetensi Pembiakan Tanaman.
    </string>
    <string name="layout">Layout</string>
    <string name="deskripsi">A rose is a woody perennial flowering plant of the genus Rosa, in the family Rosaceae, or the flower it bears. There are over a hundred species and thousands of cultivars. They form a group of plants that can be erect shrubs.</string>
    <string name="nav_home">Home</string>
    <string name="aboutme">Front-End Android Developer</string>
    <string name="nav_apersepsi">Apersepsi</string>
    <string name="nav_kikd">KI/KD</string>
    <string name="nav_materi">Materi</string>
    <string name="nav_simulasi">Simulasi</string>
    <string name="nav_pengayaan">Pengayaan</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_materi_server">Materi Server</string>
    <string name="text_server_pengertian_element_mesin">
        \nMesin adalah sebuah alat untuk memindahkan energi atau benda, sehingga mempunyai efisiensi.
        \n\nEfisiensi adalah perbandingan antara Keluaran dengan Masukan. Dalam hal ini, Efisiensi meliputi efisiensi mekanis, termis, hidrolis dan elektris. Elemen adalah bagian penting yang dibutuhkan dari suatu keseluruhan yang lebih besar.
        \n\nElemen mesin adalah bagian dari suatu alat untuk memindahkan energi/benda yang mempunyai efisiensi mekanis, termis, hidrolis, maupun elektris.\n\n
    </string>
    <string name="text_server_kelebihan_voip">
1) Biaya lebih rendah untuk sambungan langsung jarak jauh. Penekanan utama dari VoIP adalah biaya. Dengan dua lokasi yang terhubung dengan internet maka biaya percakapan menjadi sangat rendah. \n\n
2) Memanfaatkan infrastruktur jaringan data yang sudah ada untuk suara. Seperti memanfaatkan jalur internet atau bandwidth yang telah di sewa ke ISP, sehingga tidak diperlukan lagi tambahan biaya atau menekan biaya percakapan telepon yang masih menggunkan jalur Public Switched Telephone Network (PSTN) Telkom ( Fix line ). \n\n
3) Penggunaan bandwidth yang lebih kecil daripada telepon biasa. Dengan majunya teknologi penggunaan bandwidth untuk voice sekarang ini menjadi sangat kecil. Teknik pemampatan data memungkinkan suara hanya membutuhkan sekitar 8kbps bandwidth. \n\n
4) Memungkinkan digabung dengan jaringan telepon lokal yang sudah ada. Dengan adanya gateway bentuk jaringan VoIP bisa disambungkan dengan PABX yang ada dikantor. Komunikasi antar kantor bisa menggunakan pesawat telepon biasa. \n\n
5) Berbagai bentuk jaringan VoIP bisa digabungkan menjadi jaringan yang besar. Contoh di Indonesia adalah VoIP Rakyat. \n\n
6) Variasi penggunaan peralatan yang ada, misal dari PC sambung ke telepon biasa, IP phone handset. \n\n

    </string>
    <string name="text_kd_memahami_dasar_mesin">
        3.1. Memahami dasar-dasar mesin. \n\n
        4.1. Menerapkan perhitungan dasar-dasar mesin. \n\n
    </string>
    <string name="indikator_memahami_dasar_mesin">
        1. Menjelaskan dasar ilmu statika dan tegangan sesuai konsep keilmuan yang terkait \n\n
        2. Menerangkan komponen/elemen mesin sesuai konsep keilmuan yang terkait. \n\n
    </string>
    <string name="nav_pengantar">Pengantar</string>
    <string name="nav_materi2">Pembiakan Generatif</string>
    <string name="nav_pengenalan_komponen_mesin">Penerapan</string>
    <string name="text_server_pengertian2">
        Contoh mekanis  :   Pesawat angkut, dongkrak, mesin pres, mesin tekuk, dan mesin perkakas.\n\n
        Contoh termis   :   ketel uap, motor bakar, mesin uap, dan turbin uap.\n\n
        Contoh hidrolis :   pompa air, dan turbin air.\n\n
        Contoh Elektrik :   pembangkit listrik, dan motor listrik\n\n
    </string>
    <string name="Gaya_Atas">
        Gaya menyebabkan perubahan bentuk (deformasi) pada suatu struktur. Gaya mempunyai nilai dan arah, digambarkan dalam bentuk vektor yang arahnya ditunjukkan dengan anak panah. Sementara itu, panjang vektor digunakan untuk menunjukkan nilai gaya. \n\n
    </string>
    <string name="T_gaya_no_1">
        1.
    </string>
    <string name="m2_s1_2">
        Bahan tanam merupakan bagian dari tanaman, seperti benih dan setek yang dapat dipergunakan sebagai bahan untuk membiakkan tanaman. Bahan tanam untuk pembiakan secara generatif adalah biji yang disiapkan menjadi benih. Pada biji monokotil, morfologi biji terdiri dari kulit biji (seed coat), endosperm, kotiledon, dan embrio. Pada biji tanaman Gymnospermae, morfologi biji terdiri dari kulit biji (testa), mega gametofit, embrio yang terdiri dari kotiledon dan calon akar, sedangkan untuk biji dikotiledon terdiri dari kulit biji (testa) dan embrio (dua kotiledon, calon akar dan calon daun pertama)\n
    </string>
    <string name="T_gaya_no_2">
        2.
    </string>
    <string name="T_gaya_isi_2">
        Hukum Transmisibilitas Gaya\n\n
        \nHukum Transmisibilitas Gaya merupakan kondisi keseimbangan atau gerak suatu benda tegar tidak akan berubah apabila gaya yang beraksi pada suatu titik diganti dengan gaya lain yang sama besar dan arahnya, tetapi beraksi pada suatu titik yang berbeda, asalkan kedua gaya tersebut terletak pada suatu garis aksi yang sama.\n
    </string>
    <string name="T_gaya_no_3">
    3.
    </string>
    <string name="T_gaya_isi_newton_1">
        Hukum I Newton: Jika resultan gaya (ΣF) dan atau momen (ΣM) yang dikenakan benda sama dengan nol, maka sistem akan seimbang.\n
    </string>
    <string name="T_gaya_isi_newton_1_isi_A">
        ΣF = 0 (kesetimbangan gaya)
    </string>
    <string name="T_gaya_isi_newton_1_isi_B">
        ΣM = 0 (kesetimbangan momen)
    </string>
    <string name="T_gaya_no_4">
    4.
    </string>
    <string name="T_gaya_isi_newton_2">
        Hukum II Newton: Jika resultan gaya/momen yang dikenakan pada benda tidak sama dengan nol, maka benda tersebut akan mendapat percepatan linier atau anguler berbanding lurus dengan resultan yang bersangkutan.
    </string>
    <string name="T_gaya_isi_newton_2_isi_A">
        a = ΣF/m (untuk gerak lurus)
    </string>
    <string name="T_gaya_isi_newton_2_isi_B">
        a = ΣM/I (untuk gerak melingkar)
    </string>
    <string name="T_gaya_no_5">
    5.
    </string>
    <string name="T_gaya_isi_newton_3">
        Hukum III Newton: Setiap benda yang mendapat gaya aksi akan memeberikan gaya reaksi yang besarnya sama dengan gaya aksi, tetapi arahnya berlawanan.
    </string>
    <string name="T_gaya_isi_newton_3_isi_A">
        ΣF aksi = -ΣF reaksi
    </string>
    <string name="keseimbangan_benda_tegar_a">
        Suatu benda berada dalam keseimbangan apabila gaya-gaya yang bekerja pada benda tersebut tidak menyebabkan translasi maupun rotasi pada benda. Oleh karena itu, agar benda tegar mengalami keseimbangan, translasi dan rotasi tersebut harus dihilangkan.
    </string>
    <string name="keseimbangan_benda_tegar_b">
Untuk mencegah translasi, maka resultan sistem gaya-gaya yang bekerja haruslah sama dengan nol. Untuk mencegah rotasi, maka jumlah momen yang dihasilkan dari resultan oleh semua gaya yang bekerja harus sama dengan nol.
    </string>
    <string name="KBT_no_1">
        1.
    </string>
    <string name="KBT_judul_1">
        Keseimbangan Gaya
    </string>
    <string name="KBT_isi_1">
        Dua buah gaya seimbang harganya sama, berlawanan arah dan segaris kerja. Gaya yang bekerja dalam kesetimbangan, jika dijumlahkan secara geometris akan membentuk segi-banyak tertutup. Tiga buah gaya atau lebih akan seimbang jika terletak pada satu bid (koplanar) dan berpot pada satu titik (konkruen).
    </string>
    <string name="KBT_no_2">
        2.
    </string>
    <string name="KBT_judul_2">
        Keseimbangan Momen
    </string>
    <string name="KBT_isi_2">
    Momen adalah perkalian antara gaya dengan lengan gaya yang tegak lurus dengan arah gaya. Momen resultan dari beberapa gaya sama dengan jumlah momen komponennya. Jumlah momen sama dengan nol jika pusat momen terletak pada garis kerja gaya dan jumlahnya sama dengan nol.
    </string>
    <string name="SM_no_3a">
        a
    </string>
    <string name="SM_judul_3a">
        Kelebihan Sambungan Lem
    </string>
    <string name="SM_isi_3a_no_1">
        1)
    </string>
    <string name="SM_isi_3a_isi_1">
        Dapat menyambung bahan sejenis atau bahan yang berbeda seperti logam dengan plastik, kulit, atau karet.
    </string>
</resources>