<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <TextView
            android:id="@+id/id1Lem"
            style="@style/FontTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/SM_no_3a"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/text1Lem"
            style="@style/FontTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:text="@string/SM_judul_3a"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="32dp">

        <TextView
            android:id="@+id/id2Lem"
            style="@style/FontTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/SM_isi_3a_no_1"
            android:textSize="16dp" />

        <io.github.leibnik.justifytextview.JustifyTextView
            android:id="@+id/text2Lem"
            style="@style/FontTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:text="@string/SM_isi_3a_isi_1"
            android:textSize="16dp"
            app:align_chars="true"
            app:character_space="0px"
            app:line_space="16px" />

    </LinearLayout>

</LinearLayout>