<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize">

    <ScrollView
        android:id="@+id/svLog"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <io.github.leibnik.justifytextview.JustifyTextView
                            style="@style/FontTextViewStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:baselineAligned="false"
                            android:text="@string/Gaya_Atas"
                            android:textSize="16dp"
                            app:align_chars="true"
                            app:character_space="0px"
                            app:line_space="3px" />

                        <ImageView
                            android:id="@+id/ivGambar1"
                            android:layout_width="match_parent"
                            android:layout_height="279dp"
                            android:layout_gravity="center"
                            android:paddingBottom="16dp"
                            android:src="@drawable/l1m1g1" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.pixplicity.fontview.FontAppCompatTextView
                                style="@style/FontTextViewStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:text="@string/T_gaya_no_1"
                                android:textSize="16dp" />

                            <TextView
                                style="@style/FontTextViewStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:baselineAligned="false"
                                android:text="Bagian_bagian Generatif Biji"
                                android:textSize="16dp" />

                        </LinearLayout>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="297dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="9dp"
                            android:src="@drawable/l1m1g2" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dp"
                            >
                            <io.github.leibnik.justifytextview.JustifyTextView
                                style="@style/FontTextViewStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:baselineAligned="false"
                                android:text="@string/m2_s1_2"
                                android:textSize="16dp"
                                app:align_chars="true"
                                app:character_space="0px"
                                app:line_space="16px" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.pixplicity.fontview.FontAppCompatTextView
                                style="@style/FontTextViewStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:text="@string/T_gaya_no_2"
                                android:textSize="16dp" />

                            <io.github.leibnik.justifytextview.JustifyTextView
                                style="@style/FontTextViewStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:baselineAligned="false"
                                android:text="@string/T_gaya_isi_2"
                                android:textSize="16dp"
                                app:align_chars="true"
                                app:character_space="0px"
                                app:line_space="3px" />

                        </LinearLayout>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="195dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="16dp"
                            android:src="@drawable/sdt_gaya3" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.pixplicity.fontview.FontAppCompatTextView
                                style="@style/FontTextViewStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:text="@string/T_gaya_no_3"
                                android:textSize="16dp" />

                            <io.github.leibnik.justifytextview.JustifyTextView
                                style="@style/FontTextViewStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="6dp"
                                android:baselineAligned="false"
                                android:text="@string/T_gaya_isi_newton_1"
                                android:textSize="16dp"
                                app:align_chars="true"
                                app:character_space="0px"
                                app:line_space="3px" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingLeft="16dp">

                            <TextView
                                android:layout_width="216dp"
                                android:layout_height="wrap_content"
                                android:background="@drawable/gra_green"
                                android:text="@string/T_gaya_isi_newton_1_isi_A" />

                            <TextView
                                android:layout_width="216dp"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="16dp"
                                android:background="@drawable/gra_green"
                                android:text="@string/T_gaya_isi_newton_1_isi_B" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.pixplicity.fontview.FontAppCompatTextView
                                style="@style/FontTextViewStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:text="@string/T_gaya_no_4"
                                android:textSize="16dp" />

                            <io.github.leibnik.justifytextview.JustifyTextView
                                style="@style/FontTextViewStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="6dp"
                                android:baselineAligned="false"
                                android:text="@string/T_gaya_isi_newton_2"
                                android:textSize="16dp"
                                app:align_chars="true"
                                app:character_space="0px"
                                app:line_space="3px" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingLeft="16dp">

                            <TextView
                                android:layout_width="216dp"
                                android:layout_height="wrap_content"
                                android:background="@drawable/gra_cyan"
                                android:text="@string/T_gaya_isi_newton_2_isi_A" />

                            <TextView
                                android:layout_width="216dp"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="16dp"
                                android:background="@drawable/gra_cyan"
                                android:text="@string/T_gaya_isi_newton_2_isi_B" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.pixplicity.fontview.FontAppCompatTextView
                                style="@style/FontTextViewStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:text="@string/T_gaya_no_5"
                                android:textSize="16dp" />

                            <io.github.leibnik.justifytextview.JustifyTextView
                                style="@style/FontTextViewStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="6dp"
                                android:baselineAligned="false"
                                android:text="@string/T_gaya_isi_newton_3"
                                android:textSize="16dp"
                                app:align_chars="true"
                                app:character_space="0px"
                                app:line_space="3px" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingLeft="16dp">

                            <TextView
                                android:layout_width="216dp"
                                android:layout_height="wrap_content"
                                android:background="@drawable/gra_magneta"
                                android:text="@string/T_gaya_isi_newton_3_isi_A"
                                android:layout_marginBottom="16dp"/>

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>